--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Adding config.py file., API_Practice and random_numbers files
+config.py
+API_practice.ipynb
+random_numbers.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
